publish: Merged in truepl/16.polyconf.com/wednesday (pull request #2)
generated from commit b323152f265c9c56cad2cfd67903440d35782e0a

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -169,9 +169,9 @@
       <nav>
         <h4>Follow us</h4>
         <ul>
-          <li><a href="http://facebook.com/polyconf">Facebook</a></li>
-          <li><a href="http://twitter.com/polyconfhq">Twitter</a></li>
-          <li><a href="https://www.youtube.com/user/polyconf">YouTube</a></li>
+          <li><a href="http://facebook.com/polyconf" target="_blank">Facebook</a></li>
+          <li><a href="http://twitter.com/polyconfhq" target="_blank">Twitter</a></li>
+          <li><a href="https://www.youtube.com/user/polyconf" target="_blank">YouTube</a></li>
         </ul>
       </nav>
     </div>
@@ -241,10 +241,10 @@
   
 </div>  
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
+
   
-  <script type="text/javascript" src="/assets/vendor.b8fc26241de5573b1b4113338faf3274.js"></script>
-  
-  <script type="text/javascript" src="/assets/app.4fdca25d7d5e81a797e8d20290726a92.js"></script>
+  <script type="text/javascript" src="/assets/app.af1826647599523c709569ca3762feef.js"></script>
   
 
 </body>
