--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -199,20 +199,6 @@
   </div>
 </section>
 
-<section id="sponsors">
-  <div class="container">
-    <h2 class="color-teal">Become a sponsor</h2>
-    <p class="lead">
-      Help us create a great conference.<br>
-      Become our partner and secure maximum exposure with one of our packages.
-    </p>
-    <div class="button-container">
-      <a href="/sponsorship" class="big teal button">Sponsorship packages</a>
-    </div>
-  </div>
-</section>
-
-
 
 
     <section id="last">
@@ -249,9 +235,9 @@
       <nav>
         <h4>Follow us</h4>
         <ul>
-          <li><a href="http://facebook.com/polyconf">Facebook</a></li>
-          <li><a href="http://twitter.com/polyconfhq">Twitter</a></li>
-          <li><a href="https://www.youtube.com/user/polyconf">YouTube</a></li>
+          <li><a href="http://facebook.com/polyconf" target="_blank">Facebook</a></li>
+          <li><a href="http://twitter.com/polyconfhq" target="_blank">Twitter</a></li>
+          <li><a href="https://www.youtube.com/user/polyconf" target="_blank">YouTube</a></li>
         </ul>
       </nav>
     </div>
@@ -321,10 +307,10 @@
   
 </div>  
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
+
   
-  <script type="text/javascript" src="/assets/vendor.b8fc26241de5573b1b4113338faf3274.js"></script>
-  
-  <script type="text/javascript" src="/assets/app.4fdca25d7d5e81a797e8d20290726a92.js"></script>
+  <script type="text/javascript" src="/assets/app.af1826647599523c709569ca3762feef.js"></script>
   
 
 </body>
