publish: Merged in ga (pull request #6)
generated from commit 4bcbc9f838dc0055789660a0028e7042afd76ad5

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <a href="http://twitter.com/karolinaferenz">@karolinaferenz</a>
     </div>
   </div>
-  <div class="twitter element">
+  <div class="twitter element fourth">
     <div class="inside">
       <figure class="avatar"><img src="/assets/twitter/mehowte.jpg" /></figure>
       <p>Thanks @polyconfhq team for another edition of an awesome conference! You rock!</p>
@@ -273,11 +273,13 @@
           <li><a href="/">About PolyConf</a></li>
         </ul>
       </nav>
+<!--
       <nav>
         <h4>&nbsp;</h4>
         <ul>
         </ul>
       </nav>
+-->
       <nav>
         <h4>Follow us</h4>
         <ul>
