--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -72,118 +72,347 @@
 
         <h3>Sponsorship packages</h3>
 
-          <div class="desktop table-container">
-            <table>
-              <tr class="header">
-                <td class="description no-border">&nbsp;</td>
-                <td class="package"><span class="name">Platinum</span><span class="price">&euro; 8192</span></td>
-                <td class="package"><span class="name">Gold</span><span class="price">&euro; 4096</span></td>
-                <td class="package"><span class="name">Silver</span><span class="price">&euro; 2048</span></td>
-                <td class="package"><span class="name">Bronze</span><span class="price">&euro; 1024</span></td>
-                <td class="package border-right"><span class="name">Supporter</span><span class="price">&euro; 384</span></td>
-              </tr>
+        <div class="desktop table-container">
+          <table>
+            <tr class="header">
+              <td class="description no-border">&nbsp;</td>
+              <td class="package"><span class="name">Platinum</span><span class="price">&euro; 8192</span></td>
+              <td class="package"><span class="name">Gold</span><span class="price">&euro; 4096</span></td>
+              <td class="package"><span class="name">Silver</span><span class="price">&euro; 2048</span></td>
+              <td class="package"><span class="name">Bronze</span><span class="price">&euro; 1024</span></td>
+              <td class="package border-right"><span class="name">Supporter</span><span class="price">&euro; 384</span></td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Number of spots available</td>
-                <td class="number">2</td>
-                <td class="number">4</td>
-                <td class="number">6</td>
-                <td class="number">10</td>
-                <td class="number border-right">&infin;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Number of spots available</td>
+              <td class="number">2</td>
+              <td class="number">4</td>
+              <td class="number">6</td>
+              <td class="number">10</td>
+              <td class="number border-right">&infin;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Conference passes</td>
-                <td class="number">6</td>
-                <td class="number">4</td>
-                <td class="number">3</td>
-                <td class="number">2</td>
-                <td class="number border-right">1</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Conference passes</td>
+              <td class="number">6</td>
+              <td class="number">4</td>
+              <td class="number">3</td>
+              <td class="number">2</td>
+              <td class="number border-right">1</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Logo in sponsors section on website</td>
-                <td class="yes"><span class="small">up to 200 words<br>description</span></td>
-                <td class="yes"><span class="small">up to 100 words<br>description</span></td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes border-right">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Logo in sponsors section on website</td>
+              <td class="yes"><span class="small">up to 200 words<br>description</span></td>
+              <td class="yes"><span class="small">up to 100 words<br>description</span></td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes border-right">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Logo on conference programme</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes border-right">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Logo on conference programme</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes border-right">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Tweets during the conference </td>
-                <td class="number">2</td>
-                <td class="number">1</td>
-                <td class="number">1</td>
-                <td class="number border-right">1</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Tweets during the conference </td>
+              <td class="number">2</td>
+              <td class="number">1</td>
+              <td class="number">1</td>
+              <td class="number border-right">1</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Job offers on our website </td>
-                <td class="number">6</td>
-                <td class="number">4</td>
-                <td class="number border-right">2</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Job offers on our website </td>
+              <td class="number">6</td>
+              <td class="number">4</td>
+              <td class="number border-right">2</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Roll-up in the venue</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes border-right">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Roll-up in the venue</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes border-right">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Logo on conference videos</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes border-right">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Logo on conference videos</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes border-right">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Booth space</td>
-                <td class="yes">&nbsp;</td>
-                <td class="yes border-right">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Booth space</td>
+              <td class="yes">&nbsp;</td>
+              <td class="yes border-right">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Roll-up on stage</td>
-                <td class="yes border-right">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
+            <tr class="feature">
+              <td class="label">Roll-up on stage</td>
+              <td class="yes border-right">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
 
-              <tr class="feature">
-                <td class="label">Logo on the main screen, during breaks</td>
-                <td class="yes border-right">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-                <td class="no-border">&nbsp;</td>
-              </tr>
-            </table>
-          </div>
+            <tr class="feature">
+              <td class="label">Logo on the main screen, during breaks</td>
+              <td class="yes border-right">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+              <td class="no-border">&nbsp;</td>
+            </tr>
+          </table>
+        </div>
 
+        <div class="mobile table-container">
+          <table>
+            <tr class="header">
+              <td class="package-name" colspan="2"><span class="name">Platinum</span><span class="price">&euro; 8192</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Number of spots available</td>
+              <td class="number">1</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Conference passes</td>
+              <td class="number">6</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo in sponsors section on website</td>
+              <td class="yes"><span class="small">up to 200 words<br>description</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on conference programme</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Tweets during the conference </td>
+              <td class="number">2</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Job offers on our website </td>
+              <td class="number">6</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Roll-up in the venue</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on conference videos</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Booth space</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Roll-up on stage</td>
+              <td class="yes border-right">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on the main screen, during breaks</td>
+              <td class="yes border-right">&nbsp;</td>
+            </tr>
+          </table>
+        </div>
+
+        <div class="mobile table-container">
+          <table>
+            <tr class="header">
+              <td class="package-name" colspan="2"><span class="name">Gold</span><span class="price">&euro; 4096</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Number of spots available</td>
+              <td class="number">3</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Conference passes</td>
+              <td class="number">4</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo in sponsors section on website</td>
+              <td class="yes"><span class="small">up to 100 words<br>description</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on conference programme</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Tweets during the conference </td>
+              <td class="number">1</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Job offers on our website </td>
+              <td class="number">4</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Roll-up in the venue</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on conference videos</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Booth space</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+          </table>
+        </div>
+
+        <div class="mobile table-container">
+          <table>
+            <tr class="header">
+              <td class="package-name" colspan="2"><span class="name">Silver</span><span class="price">&euro; 2048</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Number of spots available</td>
+              <td class="number">5</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Conference passes</td>
+              <td class="number">3</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo in sponsors section on website</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on conference programme</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Tweets during the conference </td>
+              <td class="number">1</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Job offers on our website </td>
+              <td class="number">2</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Roll-up in the venue</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+          </table>
+        </div>
+
+
+        <div class="mobile table-container">
+          <table>
+            <tr class="header">
+              <td class="package-name" colspan="2"><span class="name">Bronze</span><span class="price">&euro; 1024</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Number of spots available</td>
+              <td class="number">5</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Conference passes</td>
+              <td class="number">3</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo in sponsors section on website</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo on conference programme</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Tweets during the conference </td>
+              <td class="number">1</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Job offers on our website </td>
+              <td class="number">2</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Roll-up in the venue</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+          </table>
+        </div>
+
+        <div class="mobile table-container">
+          <table>
+            <tr class="header">
+              <td class="package-name" colspan="2"><span class="name">Supporter</span><span class="price">&euro; 384</span></td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Number of spots available</td>
+              <td class="number">&infin;</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Conference passes</td>
+              <td class="number">1</td>
+            </tr>
+
+            <tr class="feature">
+              <td class="label">Logo in sponsors section on website</td>
+              <td class="yes">&nbsp;</td>
+            </tr>
+
+          </table>
+        </div>
 
       </div>
 
@@ -228,11 +457,13 @@
           <li><a href="/">About PolyConf</a></li>
         </ul>
       </nav>
+<!--
       <nav>
         <h4>&nbsp;</h4>
         <ul>
         </ul>
       </nav>
+-->
       <nav>
         <h4>Follow us</h4>
         <ul>
