publish: improv: adjust satellite events
generated from commit ec76e98de325d80a0ab5ada3a6282d9a9949bce5

--- a/meetings/index.html
+++ b/meetings/index.html
@@ -36,7 +36,7 @@
 
   
 </head>
-<body class="sponsors">
+<body class="meetings">
   <div id="wrapper">
 
     <header>
@@ -44,7 +44,7 @@
       <nav>
   <ul>
     <li ><a href="/"><span>About</span></a></li>
-    <li ><a href="/satellites"><span>Satellites</span></a></li>
+    <li  class="active" ><a href="/meetings"><span>Meetings</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Agenda</span></a></li> -->
     <!-- <li ><a href="/tickets"><span>Tickets</span></a></li> -->
 <!--     <li ><a href="/speakers"><span>Speakers</span></a></li> -->
@@ -59,81 +59,62 @@
     </header>
 
     
-  
-<section id="sponsors-page">
+
+<section id="meetings">
   <div class="container">
 
-    <h1 class="color-blue">Sponsors</h1>
-    <p class="lead">It is thanks to the help of our sponsors and supporters that the conference is made possible each year.<br>Have a look on who they are and what they do.</p>
+    <h1 class="transform-normal">POLYCONF Satellites</h1>
+    <p class="lead">POLYCONFx (PolyConf satellite meetings) are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities.</p>
 
-    <div class="sponsors" id="main-sponsors">
-      <h3>Main sponsors</h3>
-      <div class="sponsor">
-        <figure></figure>
-        <p>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.</p>
+    <div id="four-meetings">
+
+      <div class="meeting" id="warsaw-meeting">
+        <h2 class="city">Warsaw</h2>
+        <div class="date">5 march 2016</div>
+        <a href="/meetings/warsaw" class="small green button">Learn more</a>
+        <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
       </div>
-      <div class="sponsor">
-        <figure></figure>
-        <p>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.</p>
+
+      <div class="meeting" id="paris-meeting">
+        <h2 class="city">Paris</h2>
+        <div class="date">TBA</div>
+        <a href="/meetings/paris" class="small green button">Learn more</a>
+        <figure><img src="/assets/paris-white.svg" alt="Warsaw" /></figure>
       </div>
-      <div class="sponsor">
-        <figure></figure>
-        <p>Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus.</p>
+
+      <div class="meeting" id="berlin-meeting">
+        <h2 class="city">Berlin</h2>
+        <div class="date">TBA</div>
+        <a href="/meetings/berlin" class="small green button">Learn more</a>
+        <figure><img src="/assets/berlin-white.svg" alt="Warsaw" /></figure>
       </div>
-    </div>
-  
-    <div class="sponsors" id="regular-sponsors">
-      <h3>Sponsors</h3>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-    </div>
-  
-    <div class="sponsors" id="partners-supporters">
-      <h3>Partners & Supporters</h3>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
-      <div class="sponsor"><figure>&nbsp;</figure></div>
+
+      <div class="meeting" id="london-meeting">
+        <h2 class="city">London</h2>
+        <div class="date">March 30th, 2016</div>
+        <a href="/meetings/london" class="small green button">Learn more</a>
+        <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
+
+      </div>
+
     </div>
 
-    
-
-  </div>  
+  </div>
 </section>
+
+<section id="sponsors">
+  <div class="container">
+    <h2 class="color-teal">Become a sponsor</h2>
+    <p class="lead">
+      Help us create a great conference.<br>
+      Become our partner and secure maximum exposure with one of our packages.
+    </p>
+    <div class="button-container">
+      <a href="/sponsorship" class="big teal button">Sponsorship packages</a>
+    </div>
+  </div>
+</section>
+
 
 
 
