--- a/agenda/index.html
+++ b/agenda/index.html
@@ -44,6 +44,7 @@
       <nav>
   <ul>
     <li ><a href="/"><span>About</span></a></li>
+    <li ><a href="/satellites"><span>Satellites</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Agenda</span></a></li> -->
     <!-- <li ><a href="/tickets"><span>Tickets</span></a></li> -->
 <!--     <li ><a href="/speakers"><span>Speakers</span></a></li> -->
