--- a/satellites/index.html
+++ b/satellites/index.html
@@ -70,7 +70,7 @@
 
       <div class="meeting" id="warsaw-meeting">
         <h2 class="city">Warsaw</h2>
-        <div class="date">5 march 2016</div>
+        <div class="date">March 5th, 2016</div>
         <!-- <a href="/meetings/warsaw" class="small green button">Learn more</a> -->
         <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
       </div>
@@ -166,15 +166,26 @@
 
   </div>
 
-  <div id="more-menu">
+  <a id="more-menu-link"><span></span></a>
 
-  <ul>
+<div id="more-menu">
+  
+  <a id="close-menu-link"><span></span></a>  
+
+  <ul class="mobile-menu">
+    <li><a href="/">About</a></li>
+    <li><a href="/satellites">Satellites</a></li>
+    <li><a href="/sponsorship">Become a sponsor</a></li>
+  </ul>
+<!--
+  <ul class="none">
     <li class="soon"><a href="#">Workshops</a></li>
     <li class="soon"><a href="#">Hotels and restaurants</a></li>
     <li class="soon"><a href="#">PolyConf 5K Run</a></li>
     <li><a href="#">Terms and conditions</a></li>
     <li><a href="#">Blog</a></li>
   </ul>
+-->
   <h3>Previous editions</h3>
   <ul>
     <li><a href="#">PolyConf 2015</a></li>
@@ -195,7 +206,7 @@
   
   <script type="text/javascript" src="/assets/vendor.eebab789d59b4096484eedce8c5f159b.js"></script>
   
-  <script type="text/javascript" src="/assets/app.4fdca25d7d5e81a797e8d20290726a92.js"></script>
+  <script type="text/javascript" src="/assets/app.0466115c9781da7aa3ec99c316c0e54e.js"></script>
   
 
   <script type="text/javascript">
