--- a/terms/index.html
+++ b/terms/index.html
@@ -178,15 +178,26 @@
 
   </div>
 
-  <div id="more-menu">
+  <a id="more-menu-link"><span></span></a>
 
-  <ul>
+<div id="more-menu">
+  
+  <a id="close-menu-link"><span></span></a>  
+
+  <ul class="mobile-menu">
+    <li><a href="/">About</a></li>
+    <li><a href="/satellites">Satellites</a></li>
+    <li><a href="/sponsorship">Become a sponsor</a></li>
+  </ul>
+<!--
+  <ul class="none">
     <li class="soon"><a href="#">Workshops</a></li>
     <li class="soon"><a href="#">Hotels and restaurants</a></li>
     <li class="soon"><a href="#">PolyConf 5K Run</a></li>
     <li><a href="#">Terms and conditions</a></li>
     <li><a href="#">Blog</a></li>
   </ul>
+-->
   <h3>Previous editions</h3>
   <ul>
     <li><a href="#">PolyConf 2015</a></li>
@@ -207,7 +218,7 @@
   
   <script type="text/javascript" src="/assets/vendor.eebab789d59b4096484eedce8c5f159b.js"></script>
   
-  <script type="text/javascript" src="/assets/app.4fdca25d7d5e81a797e8d20290726a92.js"></script>
+  <script type="text/javascript" src="/assets/app.0466115c9781da7aa3ec99c316c0e54e.js"></script>
   
 
   <script type="text/javascript">
