publish: Merged in truepl/16.polyconf.com/feb1 (pull request #12)
generated from commit a49fdb75f0f8fa454fee8182a12633fd2fb3ca46

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -34,6 +34,8 @@
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
+  <meta property="og:image" content="http://polyconf.com/og_satellites.jpg" />
+
   
 </head>
 <body class="meetings">
@@ -70,7 +72,7 @@
 
       <div class="meeting" id="warsaw-meeting">
         <h2 class="city">Warsaw</h2>
-        <div class="date">March 5th, 2016</div>
+        <div class="date">March 3th, 2016</div>
         <!-- <a href="/meetings/warsaw" class="small green button">Learn more</a> -->
         <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
       </div>
@@ -91,7 +93,7 @@
 
       <div class="meeting" id="london-meeting">
         <h2 class="city">London</h2>
-        <div class="date">March 30th, 2016</div>
+        <div class="date">March 31th, 2016</div>
         <!-- <a href="/meetings/london" class="small green button">Learn more</a> -->
         <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
 
