publish: Merged in add-warsaw (pull request #13)
generated from commit 16486cec2762351b3af381e96637dedbbe07c7f1

--- a/satellites/index.html
+++ b/satellites/index.html
@@ -73,7 +73,7 @@
       <div class="meeting" id="warsaw-meeting">
         <h2 class="city">Warsaw</h2>
         <div class="date">March 3th, 2016</div>
-        <!-- <a href="/meetings/warsaw" class="small green button">Learn more</a> -->
+        <a href="/meetings/warsaw" class="small green button">Learn more</a> 
         <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
       </div>
 
