--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -13,12 +13,13 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://polyconf.com/" />
   <meta property="og:description" content="PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies for programmers interested in polyglot approach to software development." />
-  <meta property="og:image" content="http://polyconf.com/fb.jpg" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image" content="http://polyconf.com/assets/polyconf16.png" />
+  <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="PolyConf" />
   <meta property="og:locale" content="en_US" />
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico">
