publish: Merged in truepl/16.polyconf.com (pull request #15)
generated from commit 888f3dd1479152addc0876fc199bbc5c129c041f

--- a/meetings/warsaw/index.html
+++ b/meetings/warsaw/index.html
@@ -64,7 +64,7 @@
 <section id="warsaw-meeting">
   <div class="container">
 
-    <img src="/assets/warsaw-gray.svg" />
+    <img src="/assets/warsaw-gray.svg" id="landmark" />
 
     <h1 class="color-blue transform-normal">POLYCONF x WARSAW</h1>
     <p class="meeting-info">
@@ -123,6 +123,7 @@
 -->
     <div class="partners">
       <h3>Partners</h3>
+      <img src="/assets/sponsors-partners/el-passion.svg" alt="EL Passion" />
     </div>
   </div>
 </section>
