publish: Merged in fix-link-partner (pull request #16)
generated from commit b1410c6cf3c1b13f925f0b58cb4923ee7a5faa72

--- a/meetings/warsaw/index.html
+++ b/meetings/warsaw/index.html
@@ -123,7 +123,7 @@
 -->
     <div class="partners">
       <h3>Partners</h3>
-      <img src="/assets/sponsors-partners/el-passion.svg" alt="EL Passion" />
+      <a href="http://www.elpassion.com/"><img src="/assets/sponsors-partners/el-passion.svg" alt="EL Passion" /></a>
     </div>
   </div>
 </section>
