--- a/satellites/warsaw/index.html
+++ b/satellites/warsaw/index.html
@@ -35,11 +35,9 @@
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-  <meta property="og:image" content="http://polyconf.com/og_satellites.jpg" />
-
   
 </head>
-<body class="meetings">
+<body class="meeting">
   <div id="wrapper">
 
     <header>
@@ -47,7 +45,7 @@
       <nav>
   <ul>
     <li ><a href="/"><span>About</span></a></li>
-    <li  class="active" ><a href="/satellites"><span>Satellites</span></a></li>
+    <li ><a href="/satellites"><span>Satellites</span></a></li>
     <!-- <li class="soon"><a href="#"><span>Agenda</span></a></li> -->
     <!-- <li ><a href="/tickets"><span>Tickets</span></a></li> -->
 <!--     <li ><a href="/speakers"><span>Speakers</span></a></li> -->
@@ -63,47 +61,109 @@
 
     
 
-<section id="meetings">
+<section id="warsaw-meeting">
   <div class="container">
 
-    <h1 class="transform-normal">POLYCONF Satellites</h1>
-    <p class="lead">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities.</p>
+    <img src="/assets/warsaw-gray.svg" id="landmark" />
 
-    <div id="four-meetings">
+    <h1 class="color-blue transform-normal">POLYCONF x WARSAW</h1>
+    <p class="meeting-info">
+      <span class="date">When? March 3th</span>
+      <span class="location">Where? TBA</span>
+    </p>
+    <p class="narrow">PolyConf satellite meetings are about bringing together people interested in polyglot approach to programming with the aim to promote local companies and communities. Those meetups are held in various European cities with the support of local companies. Each meetup will have 3-4 talks (max 20 minutes each) followed by a networking session.</p>
 
-      <div class="meeting" id="warsaw-meeting">
-        <h2 class="city">Warsaw</h2>
-        <div class="date">March 3th, 2016</div>
-        <a href="/satellites/warsaw" class="small green button">Learn more</a> 
-        <figure><img src="/assets/warsaw-white.svg" alt="Warsaw" /></figure>
-      </div>
+    <div class="button-container">
+      <a href="https://eventil.com/events/polyconf-warsaw-meetup" class="green big button">Register now</a>
+    </div>
 
-      <div class="meeting" id="paris-meeting">
-        <h2 class="city">Paris</h2>
-        <div class="date">TBA</div>
-        <!-- <a href="/meetings/paris" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/paris-white.svg" alt="Warsaw" /></figure>
-      </div>
+<!--
+    <div class="agenda">
 
-      <div class="meeting" id="berlin-meeting">
-        <h2 class="city">Berlin</h2>
-        <div class="date">TBA</div>
-        <!-- <a href="/meetings/berlin" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/berlin-white.svg" alt="Warsaw" /></figure>
-      </div>
+      <h3>Agenda</h3>
 
-      <div class="meeting" id="london-meeting">
-        <h2 class="city">London</h2>
-        <div class="date">March 31th, 2016</div>
-        <!-- <a href="/meetings/london" class="small green button">Learn more</a> -->
-        <figure><img src="/assets/london-white.svg" alt="Warsaw" /></figure>
+      <div class="schedule">
+
+        <div class="time-slot">
+
+          <div class="talk">
+            <figure></figure>
+            <div class="title">Title of a talk</div>
+            <div class="sub">Name Surname</div>
+            <a href="#" class="more tiny button">More</a>
+          </div>
+
+        </div>
+
+        <div class="time-slot">
+
+          <div class="talk">
+            <figure></figure>
+            <div class="title">Title of a talk</div>
+            <div class="sub">Name Surname</div>
+            <a href="#" class="more tiny button">More</a>
+          </div>
+
+        </div>
+
+        <div class="time-slot">
+
+          <div class="talk">
+            <figure></figure>
+            <div class="title">Title of a talk</div>
+            <div class="sub">Name Surname</div>
+            <a href="#" class="more tiny button">More</a>
+          </div>
+
+        </div>
 
       </div>
 
     </div>
-
+-->
+    <div class="partners">
+      <h3>Partners</h3>
+      <a href="http://www.elpassion.com/"><img src="/assets/sponsors-partners/el-passion.svg" alt="EL Passion" /></a>
+    </div>
   </div>
 </section>
+
+
+<div class="full-modal" id="speaker-modal">
+
+  <div class="container">
+
+      <div id="speaker-details" class="details">
+
+        <figure class="avatar"></figure>
+        <div class="text">
+          <h2>Name Surname</h2>
+          <h3>Position</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis risus eget urna mollis ornare vel eu leo. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum.</p>
+          <ul class="tags">
+            <li>tag</li>
+            <li>tag</li>
+          </ul>
+          <ul class="social">
+            <li><a href="#">&nbsp;</a></li>
+            <li><a href="#">&nbsp;</a></li>
+            <li><a href="#">&nbsp;</a></li>
+            <li><a href="#">&nbsp;</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+  </div>
+
+  <nav>
+    <div class="inside">
+      <a href="#" id="modal-prev"></a>
+      <a href="#" id="modal-next"></a>
+    </div>
+  </nav>
+
+</div>
 
 <section id="sponsors">
   <div class="container">
@@ -117,6 +177,7 @@
     </div>
   </div>
 </section>
+
 
 
 
